--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -44,7 +45,7 @@
     "firebase": "^11.9.1",
     "genkit": "^1.13.0",
     "lucide-react": "^0.475.0",
-    "mapbox-gl": "^3.4.0",
+    "maplibre-gl": "3.6.2",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
@@ -58,13 +59,12 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/mapbox-gl": "^3.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
+    "typescript": "^5",
     "@types/react-dom": "^18",
     "genkit-cli": "^1.13.0",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tailwindcss": "^3.4"
   }
 }
